--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   	<p class="editor-note">My dog is very grumpy</p>
     <img src="images/bax.jpg" width="400" height="320" alt="Good dog">
     <p class="editor-note">It's not a true?</p>
-        <p>Mozilla, мы являемся мировым сообществом</p>  
+    <p>Mozilla, мы являемся мировым сообществом</p>  
     <ul> 
       <li>технологов</li>
       <li>мыслителей</li>
@@ -21,6 +21,15 @@
 
     <p>работающих вместе ... </p>
     <a href="https://www.mozilla.org/ru/about/manifesto/details/">Манифест Mozilla</a>
+
+    <p>тестовый сайт работает .....</p>  
+    <ul> 
+      <li>Это хорошо/li>
+      <li>Это хорошо</li>
+      <li>Это хорошо</li>
+    </ul>
+    <a href="https://kairaturaz.github.io/">Вот его адрес</a>
+
 
     <button>Change user</button>
 
