--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <p>тестовый сайт работает .....</p>  
     <ul> 
-      <li>Это хорошо/li>
+      <li>Это хорошо</li>
       <li>Это хорошо</li>
       <li>Это хорошо</li>
     </ul>
