--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="author" content="Bax">
+    <meta name="description" content="Просто описание для тестовой страницы.">
     <title>Тестовая страница</title>
     <link href="styles/style.css" rel="stylesheet" type="text/css">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <link rel="shortcut icon" href="images/favicon-96x96.png" type="image/x-icon">
   </head>
   <body>
   	<h1>Mozilla is cool</h1>
-	
   	<p class="editor-note">My dog is very grumpy</p>
     <img src="images/bax.jpg" width="400" height="320" alt="Good dog">
     <p class="editor-note">It's not a true?</p>
@@ -18,13 +20,11 @@
       <li>мыслителей</li>
       <li>строителей</li>
     </ul>
-
     <p>работающих вместе ... </p>
     <a href="https://www.mozilla.org/ru/about/manifesto/details/">Манифест Mozilla</a>
-
     <p>тестовый сайт работает .....</p>  
     <ul> 
-      <li>Это хорошо/li>
+      <li>Это хорошо</li>
       <li>Это хорошо</li>
       <li>Это хорошо</li>
     </ul>
